[gd_scene load_steps=8 format=3 uid="uid://dacrl11aege5r"]

[ext_resource type="Script" uid="uid://cydtapf6bl5t" path="res://level/traps/fire_trap.gd" id="1_0iyyv"]
[ext_resource type="Texture2D" uid="uid://b88o6nymtc3pb" path="res://assets/textures/traps/fire.png" id="2_0c545"]
[ext_resource type="AudioStream" uid="uid://1wnwd1yrbpk6" path="res://assets/audio/fire.wav" id="3_8wp5k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0iyyv"]
size = Vector2(13, 14)

[sub_resource type="Animation" id="Animation_grilc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fire Trap Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8wp5k"]
resource_name = "new_animation"
loop_mode = 1
step = 0.14
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fire Trap Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hm6ts"]
_data = {
&"RESET": SubResource("Animation_grilc"),
&"new_animation": SubResource("Animation_8wp5k")
}

[node name="Fire Trap" type="Area2D"]
collision_layer = 2
script = ExtResource("1_0iyyv")

[node name="Fire Trap Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_0c545")
hframes = 8

[node name="Fire Trap Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_0iyyv")

[node name="Damage Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hm6ts")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 8)
stream = ExtResource("3_8wp5k")
volume_db = -10.0
autoplay = true
max_distance = 400.0
attenuation = 1.7411
bus = &"2D player SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Damage Timer" to="." method="_on_damage_timer_timeout"]
